# codex-pet

./: .gitignore  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml  desktop-ci.yml
pet-assets/: README.md
scripts/: check-versions.mjs  collect-release-artifacts.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_monitor.rs  codex_monitor.rs  diagnostics.rs  lib.rs  main.rs  pets.rs  reminders.rs  storage.rs  task_queue.rs  tasks.rs  tray.rs  windows.rs
src/components/: AppErrorBoundary.tsx
src/config/: preferences.test.ts  preferences.ts
src/features/agents/: model.test.ts  model.ts  useAgentEvents.ts  useAgentHooks.ts
src/features/codex/: useCodexEvents.ts
src/features/diagnostics/: useDiagnostics.ts
src/features/pet/: PetVisualView.tsx  PetWindow.test.tsx  PetWindow.tsx  model.test.ts  model.ts
src/features/reminders/: model.test.ts  model.ts  useReminderState.ts
src/features/settings/: GeneralSettings.tsx  ReminderSettings.tsx  SettingsWindow.test.tsx  SettingsWindow.tsx  ThemeSettings.test.tsx  ThemeSettings.tsx  WorkSettings.test.tsx  WorkSettings.tsx
src/features/tasks/: model.test.ts  model.ts  useTaskQueue.ts
src/runtime/: diagnostics.ts  tauri.ts  windowGeometry.test.ts  windowGeometry.ts  windowPlacement.test.ts  windowPlacement.ts
